--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "clipboard-polyfill": "^2.4.7",
     "countup.js": "^1.9.3",
     "echarts": "^4.1.0",
-    "element-ui": "^2.8.2",
+    "element-ui": "^2.3.4",
     "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
@@ -85,7 +85,7 @@
     "chalk": "2.3.0",
     "copy-webpack-plugin": "4.2.3",
     "cross-env": "5.1.1",
-    "css-loader": "0.28.7",
+    "css-loader": "^0.28.11",
     "eslint": "4.13.1",
     "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.9.0",
@@ -108,17 +108,19 @@
     "postcss-loader": "2.0.9",
     "postcss-url": "7.3.0",
     "rimraf": "2.6.2",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
+    "sass-resources-loader": "^2.0.0",
     "semver": "5.4.1",
     "shelljs": "0.7.8",
+    "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "svg-sprite-loader": "3.5.2",
     "text-loader": "^0.0.1",
     "uglifyjs-webpack-plugin": "1.1.3",
     "url-loader": "0.6.2",
     "vue-loader": "13.7.2",
-    "vue-style-loader": "3.0.3",
+    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "2.5.10",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
