--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "clipboard": "^2.0.1",
     "clipboard-polyfill": "^2.4.7",
     "countup.js": "^1.9.3",
-    "echarts": "^4.1.0",
-    "element-ui": "2.3.4",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.3.4",
     "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.12.0",
