--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jszip": "^3.1.5",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "pubsub-js": "^1.7.0",
     "quill": "^1.3.6",
     "screenfull": "^3.3.2",
     "script-loader": "^0.7.2",
