--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "babel-preset-stage-2": "6.24.1",
     "chalk": "2.3.0",
     "copy-webpack-plugin": "4.2.3",
-    "cross-env": "5.1.1",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.11",
     "eslint": "4.13.1",
     "eslint-friendly-formatter": "3.0.0",
