--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clipboard-polyfill": "^2.4.7",
     "countup.js": "^1.9.3",
     "echarts": "^4.1.0",
+    "echarts-gl": "^1.1.1",
     "element-ui": "^2.3.4",
     "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
