--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "better-scroll": "^1.12.4",
+    "chromedriver": "^74.0.0",
     "clipboard": "^2.0.1",
     "clipboard-polyfill": "^2.4.7",
     "countup.js": "^1.9.3",
@@ -49,6 +50,7 @@
     "js-cookie": "2.2.0",
     "jszip": "^3.1.5",
     "normalize.css": "7.0.0",
+    "npm": "^6.9.0",
     "nprogress": "0.2.0",
     "pubsub-js": "^1.7.0",
     "quill": "^1.3.6",
@@ -124,8 +126,9 @@
     "vue-loader": "13.7.2",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "2.5.10",
-    "webpack": "3.10.0",
+    "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "2.9.1",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "2.9.7",
     "webpack-merge": "4.1.1"
   },
